<resources>
    <string name="app_name">SzerMil</string>
    <string name="loginButtonText">Logowanie</string>
    <string name="facebookLoginButtonText">Logowanie przez Facebook</string>
    <string name="registerButtonText">Rejestracja</string>
    <string name="szermilLogoDescription">szerMilLogo</string>
    <string name="mealName">Nazwa potrawy</string>
    <string name="addCommentText">Dodaj swój komentarz</string>
    <string name="maxText">Max 255 znaków</string>
    <string name="photoButtonText">Zrób zdjęcie</string>
    <string name="sendButtonText">Dodaj ocene</string>
    <string name="ratePhotoText">ratePhoto</string>
    <string name="rateInfoText">Ocena</string>
    <string name="mealNameLabelText">Podaj nazwę potrawy:</string>
    <string name="example_restaurant">EXAMPLE RESTAURANT</string>
    <string name="success_send">Wiadomość wysłana</string>
    <string name="failure_send">Wiadomość nie została wysłana</string>
    <string name="facebook_app_id">2174338442662151</string>
    <string name="fb_login_protocol_scheme">fb2174338442662151</string>
    <string name="addMark">Dodaj ocenę</string>
    <string name="firstName">Imię</string>
    <string name="lastName">Nazwisko</string>
    <string name="emailHint">Wpisz e-mail</string>
    <string name="passwordHint">Wpisz hasło</string>
    <string name="registerButton">Zarejestruj</string>
    <string name="contentImage">image</string>
    <string name="otherClientsReviews">Oceny innych klientów:</string>
    <string name="yourReviews">Twoje oceny:</string>
    <string name="goBack">Wstecz</string>
    <string name="example">example</string>
    <string name="searchRestaurant">Wyszukaj restauracje</string>
    <string name="yourRatingsText">Przeglądaj swoje oceny</string>
    <string name="navigationDrawerOpen">Open drawer navigation</string>
    <string name="navigationDrawerClose">Close drawer navigation</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="title_activity_main">Twój profil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
