<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffa"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.beardedhen.androidbootstrap.BootstrapLabel
        android:id="@+id/loginLabel"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bootstrapBrand="danger"
        app:bootstrapHeading="h3"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        android:text="@string/registerButtonText" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/loginLabel"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/firstName"/>

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:layout_below="@+id/firstName"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastName" />
    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/lastName"
        android:hint="@string/emailHint"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:targetApi="o"
        android:hint="@string/passwordHint"
        android:layout_below="@+id/mail"
        android:ems="10"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registerButton"
        android:layout_marginHorizontal="30dp"
        tools:targetApi="o"
        tools:ignore="ExtraText"
        >
        android:layout_width="196dp"
        android:layout_height="80dp"</com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        tools:targetApi="o"
        android:layout_above="@+id/signOutButton"
        android:text="@string/registerButton"/>
    <Button
        android:id="@+id/signOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        tools:targetApi="o"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:text="@string/goBack" />


    <!--<com.facebook.login.widget.LoginButton-->
        <!--android:id="@+id/facebookLoginButton"-->
        <!--android:layout_width="353dp"-->
        <!--android:layout_height="47dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginStart="108dp"-->
        <!--android:layout_marginEnd="142dp"-->
        <!--android:layout_marginBottom="32dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.414"-->
        <!--app:layout_constraintStart_toStartOf="parent" />-->



</RelativeLayout>