<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="#ffa"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".user_profile.UserProfile">

    <com.beardedhen.androidbootstrap.BootstrapLabel
        android:id="@+id/helloText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:bootstrapBrand="success"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        app:bootstrapHeading="h2"
        app:roundedCorners="true"
        android:text="@string/example"
        />
    <com.beardedhen.androidbootstrap.BootstrapLabel
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/example"
        android:textAlignment="textStart"
        app:bootstrapBrand="primary"
        android:layout_marginHorizontal="10dp"
        app:roundedCorners="true"
        android:layout_below="@+id/helloText"
        tools:targetApi="o" />
    <com.beardedhen.androidbootstrap.BootstrapLabel
        android:id="@+id/userRatingButton"
        android:layout_width="300dp"
        app:bootstrapHeading="h3"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:text="@string/yourRatingsText"
        app:bootstrapBrand="warning"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        android:layout_above="@+id/registerButton"
        />
    <com.beardedhen.androidbootstrap.BootstrapLabel
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        app:bootstrapHeading="h3"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="100dp"
        android:text="@string/searchRestaurant"
        app:bootstrapBrand="warning"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        />
</RelativeLayout>